# zkp-authentication

./: README.md
client/: Cargo.toml  build.rs
client/src/: main.rs  parameters.rs  zkp_utils.rs
protos/: zkp.proto
server/: Cargo.toml
server/src/: main.rs  parameters.rs  zkp_utils.rs
