[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num = "0.4.0"
rpassword = "7.2"
colored = "2"

[build-dependencies]
tonic-build = "0.9.2"
